# domestic-rembg

./: .gitignore  README.md  main.py  pyproject.toml  remove_background.py  run-rembg.command
templates/: index.html
